unpackaged/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>