unpackaged/main/default/objects/Coupon__c/fields/Always_On_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Always_On_Coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008671 - [ETL] AU Coupon BCD generation</description>
    <inlineHelpText>Please check this filed only for permanently running coupons, like the PRIMA-Coupons. If checked then the billing process will consider transactions only within this Coupon record Start and End Dates. Redeemed transactions outside of these dates will not be considered.</inlineHelpText>
    <label>Always On Coupon</label>
    <type>Checkbox</type>
</CustomField>