unpackaged/main/default/objects/Coupon__c/fields/BCD_EmailTrigger__c.field-meta.xml
<CustomField>
    <fullName>BCD_EmailTrigger__c</fullName>
    <description>EPH-7725 Send BCD file via email to Finance DL after Coupon ended</description>
    <label>BCD EmailTrigger</label>
    <type>Date</type>
</CustomField>