unpackaged/main/default/objects/Coupon__c/fields/BCD_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BCD_Submitted__c</fullName>
    <description>US-0007149: Coupon - New Invoice fields on Coupon Object</description>
    <formula>NOT( ISBLANK( BCD_Submitted_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCD Submitted</label>
    <type>Checkbox</type>
</CustomField>