unpackaged/main/default/objects/Coupon__c/fields/BCD_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>BCD_Submitted_Date__c</fullName>
    <description>US-0007149: Coupon - New Invoice fields on Coupon Object</description>
    <inlineHelpText>BCD submission should always be between the 16th and the last day of the month – make sure it is not between the 1st  and 15th of the month</inlineHelpText>
    <label>BCD Submitted Date</label>
    <type>Date</type>
</CustomField>