unpackaged/main/default/objects/Coupon__c/fields/Budget_Currency__c.field-meta.xml
<CustomField>
    <fullName>Budget_Currency__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Budget Currency</inlineHelpText>
    <label>Budget Currency</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>