unpackaged/main/default/objects/Coupon__c/fields/Budget_Manager__c.field-meta.xml
<CustomField>
    <fullName>Budget_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Budget Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coupons1</relationshipName>
    <type>Lookup</type>
</CustomField>