unpackaged/main/default/objects/Coupon__c/fields/Campaign_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>This is the Lookup that is being used to reach out to target sellers to ask them for Coupon participation</inlineHelpText>
    <label>Campaign Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>