unpackaged/main/default/objects/Coupon__c/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Please provide campaign manager so that s/he will be informed for Marketing interactions</inlineHelpText>
    <label>Campaign Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>