unpackaged/main/default/objects/Coupon__c/fields/CBT_Sellers__c.field-meta.xml
<CustomField>
    <fullName>CBT_Sellers__c</fullName>
    <description>US-0011769 - New custom fields for Coupons</description>
    <label>CBT Sellers</label>
    <type>Url</type>
</CustomField>