unpackaged/main/default/objects/Coupon__c/fields/Check_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_End_Date_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7209 Coupon Record Type: Category Based and Item Based set Stage rules</description>
    <label>Check End Date Time</label>
    <type>Checkbox</type>
</CustomField>