unpackaged/main/default/objects/Coupon__c/fields/CheckNegotiationEndDate__c.field-meta.xml
<CustomField>
    <fullName>CheckNegotiationEndDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To check the negotiation end date trigger</description>
    <label>Check Negotiation End Date</label>
    <type>Checkbox</type>
</CustomField>