unpackaged/main/default/objects/Coupon__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>