unpackaged/main/default/objects/Coupon__c/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <description>[#EPH-7944] Coupon Object - New field Contract Due Date</description>
    <inlineHelpText>This is the due date by when the seller is asked to accept the contract</inlineHelpText>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>