unpackaged/main/default/objects/Coupon__c/fields/Contract_Language__c.field-meta.xml
<CustomField>
    <fullName>Contract_Language__c</fullName>
    <description>EPH-7262 Adjustment to Coupon Object</description>
    <inlineHelpText>Defines the coupon contract type &amp; language - All sellers in that coupon will receive the same template.</inlineHelpText>
    <label>Contract Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>