unpackaged/main/default/objects/Coupon__c/fields/Coupon_Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Additional_Terms__c</fullName>
    <inlineHelpText>Important: The values of this field will be propagated to all newly created Coupon Seller records and will be visible in the Coupon Contract for sellers.</inlineHelpText>
    <label>Coupon Additional Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>