unpackaged/main/default/objects/Coupon__c/fields/Coupon_Cap__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Cap__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Max. Discount value that is offered to users (absolute cap)</inlineHelpText>
    <label>Maximum Discount Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>