unpackaged/main/default/objects/Coupon__c/fields/Coupon_Co_invest_Type__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Co_invest_Type__c</fullName>
    <description>US-0008867 - AU Coupon BCD generation</description>
    <inlineHelpText>The value in this filed has impact on the billing process. For &quot;Contra&quot; type the seller co-invest costs will be derived from coupon redeem amount (contra). For &quot;GMV&quot; type the co-invest costs will be derived from transaction GMV, potentially resulting in higher co-invest costs for the seller (depending on coupon cap and coupon discount %)</inlineHelpText>
    <label>Coupon Co-invest Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Coupon_Site__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMV</fullName>
            </value>
            <value>
                <fullName>Contra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>