unpackaged/main/default/objects/Coupon__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon Code_not_used</label>
    <length>40</length>
    <type>Text</type>
</CustomField>