unpackaged/main/default/objects/Coupon__c/fields/Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>% Discount that is offered to users</inlineHelpText>
    <label>Coupon Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>