unpackaged/main/default/objects/Coupon__c/fields/Coupon_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Amount__c</fullName>
    <description>EPH-7262 Adjustment to Coupon Object</description>
    <inlineHelpText>Absolute discount that is offered to users</inlineHelpText>
    <label>Coupon Discount Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>