unpackaged/main/default/objects/Coupon__c/fields/Coupon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_End_Date__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName  = &#39;Pop_Coupon&#39;,  DATEVALUE(&quot;2099-1-1&quot;) , null)</defaultValue>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon End Date</label>
    <type>Date</type>
</CustomField>