unpackaged/main/default/objects/Coupon__c/fields/Coupon_end_Time__c.field-meta.xml
<CustomField>
    <fullName>Coupon_end_Time__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName  = &#39;Pop_Coupon&#39;,  TIMEVALUE(&quot;00:00:00.000&quot;) , null)</defaultValue>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Coupon End Time</label>
    <type>Time</type>
</CustomField>