unpackaged/main/default/objects/Coupon__c/fields/Coupon_GMV_Target__c.field-meta.xml
<CustomField>
    <fullName>Coupon_GMV_Target__c</fullName>
    <description>[US-0015701] [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <inlineHelpText>GMV Target for the Coupon</inlineHelpText>
    <label>Coupon GMV Target</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>