unpackaged/main/default/objects/Coupon__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Unique Code that will be used by the buyer to redeem the coupon</inlineHelpText>
    <label>Coupon Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>