unpackaged/main/default/objects/Coupon__c/fields/Coupon_Source__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Source__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Coupon Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Mustang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>