unpackaged/main/default/objects/Coupon__c/fields/Coupon_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Start_Date__c</fullName>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Coupon Start Date</label>
    <type>Date</type>
</CustomField>