unpackaged/main/default/objects/Coupon__c/fields/Coupon_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Start_Time__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Coupon Start Time</label>
    <type>Time</type>
</CustomField>