unpackaged/main/default/objects/Coupon__c/fields/Coupon_Subtitle_Copy__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Subtitle_Copy__c</fullName>
    <label>Coupon Subtitle Copy</label>
    <length>55</length>
    <type>Text</type>
</CustomField>