unpackaged/main/default/objects/Coupon__c/fields/Coupon_with_Co_Funding__c.field-meta.xml
<CustomField>
    <fullName>Coupon_with_Co_Funding__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>important for eform. If this Coupon will be eBay fully funded or Seller Co-Funded</inlineHelpText>
    <label>Coupon with Co-Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>