unpackaged/main/default/objects/Coupon__c/fields/Couponsite_s__c.field-meta.xml
<CustomField>
    <fullName>Couponsite_s__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Site(s) where coupon will be visisble</inlineHelpText>
    <label>Couponsite(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ebay.de</fullName>
            </value>
            <value>
                <fullName>ebay.co.uk</fullName>
            </value>
            <value>
                <fullName>ebay.fr</fullName>
            </value>
            <value>
                <fullName>ebay.it</fullName>
            </value>
            <value>
                <fullName>ebay.es</fullName>
            </value>
            <value>
                <fullName>ebay.ch</fullName>
            </value>
            <value>
                <fullName>ebay.at</fullName>
            </value>
            <value>
                <fullName>ebay.pl</fullName>
            </value>
            <value>
                <fullName>ebay.nl</fullName>
            </value>
            <value>
                <fullName>ebay.com</fullName>
            </value>
            <value>
                <fullName>ebay.com.au</fullName>
            </value>
            <value>
                <fullName>ebay.ca</fullName>
            </value>
            <value>
                <fullName>ebay.cfr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>