unpackaged/main/default/objects/Coupon__c/fields/Credit_type__c.field-meta.xml
<CustomField>
    <fullName>Credit_type__c</fullName>
    <defaultValue>&quot;11027&quot;</defaultValue>
    <description>EPH-7724 Add new fields to Coupon Object</description>
    <label>Credit_type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>