unpackaged/main/default/objects/Coupon__c/fields/Days_since_coupon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_since_coupon_End_Date__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <formula>IF(
  (today()- Coupon_End_Date__c) &lt; 0, NULL,
   today()- Coupon_End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Coupon End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>