unpackaged/main/default/objects/Coupon__c/fields/eBay_Budget__c.field-meta.xml
<CustomField>
    <fullName>eBay_Budget__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>eBay Budget</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>