unpackaged/main/default/objects/Coupon__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>EPH-7209 Coupon Record Type: Category Based and Item Based set Stage rules</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>