unpackaged/main/default/objects/Coupon__c/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <description>US-0011769 - New custom fields for Coupons</description>
    <label>Event URL</label>
    <type>Url</type>
</CustomField>