unpackaged/main/default/objects/Coupon__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <defaultValue>&quot;O&quot;</defaultValue>
    <description>EPH-7724
Add new fields to Coupon Object</description>
    <label>ID_Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>