unpackaged/main/default/objects/Coupon__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <description>EPH-7724
Add new fields to Coupon Object</description>
    <label>Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>