unpackaged/main/default/objects/Coupon__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>US-0007149: Coupon - New Invoice fields on Coupon Object</description>
    <formula>ADDMONTHS( BCD_Submitted_Date__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>