unpackaged/main/default/objects/Coupon__c/fields/Main_Coupon_Site__c.field-meta.xml
<CustomField>
    <fullName>Main_Coupon_Site__c</fullName>
    <description>US-0008867 - AU Coupon BCD generation</description>
    <label>Main Coupon Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ebay.de</fullName>
            </value>
            <value>
                <fullName>ebay.es</fullName>
            </value>
            <value>
                <fullName>ebay.co.uk</fullName>
            </value>
            <value>
                <fullName>ebay.fr</fullName>
            </value>
            <value>
                <fullName>ebay.it</fullName>
            </value>
            <value>
                <fullName>ebay.ch</fullName>
            </value>
            <value>
                <fullName>ebay.at</fullName>
            </value>
            <value>
                <fullName>ebay.pl</fullName>
            </value>
            <value>
                <fullName>ebay.nl</fullName>
            </value>
            <value>
                <fullName>ebay.com</fullName>
            </value>
            <value>
                <fullName>ebay.com.au</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>