unpackaged/main/default/objects/Coupon__c/fields/Marketing_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Coupon_Name__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Title that will be used by Marketing</inlineHelpText>
    <label>Marketing Coupon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>