unpackaged/main/default/objects/Coupon__c/fields/Max_items_per_redemption__c.field-meta.xml
<CustomField>
    <fullName>Max_items_per_redemption__c</fullName>
    <description>US-0011769 - New custom fields for Coupons</description>
    <label>Max items per redemption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>