unpackaged/main/default/objects/Coupon__c/fields/Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemptions__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>Max. Number of redemptions per user</inlineHelpText>
    <label>Max. Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>