unpackaged/main/default/objects/Coupon__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>EPH-7724 Add new fields to Coupon Object</description>
    <formula>&quot;Debit for &quot; &amp; Coupon_ID__c  &amp; &quot; Seller Funded Coupon &quot; &amp; TEXT(MONTH( Coupon_Start_Date__c )) &amp;&quot;/&quot;&amp; TEXT(DAY(Coupon_Start_Date__c )) &amp;&quot;/&quot;&amp; TEXT(YEAR( Coupon_Start_Date__c )) &amp; &quot; - &quot;  &amp; TEXT(MONTH( Coupon_End_Date__c )) &amp;&quot;/&quot;&amp; TEXT(DAY(Coupon_End_Date__c )) &amp;&quot;/&quot;&amp; TEXT(YEAR( Coupon_End_Date__c ))</formula>
    <label>Memo</label>
    <type>Text</type>
</CustomField>