unpackaged/main/default/objects/Coupon__c/fields/Minimum_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Transaction_Value__c</fullName>
    <description>EPH-7262 Adjustment to Coupon Object</description>
    <inlineHelpText>Min. transaction value required so that coupon can be redeemed</inlineHelpText>
    <label>Minimum Transaction Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>