unpackaged/main/default/objects/Coupon__c/fields/Multiplier_GMV_Target__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_GMV_Target__c</fullName>
    <description>[US-0015701] [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <inlineHelpText>Expected ROI from this Coupon</inlineHelpText>
    <label>Multiplier GMV Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>