unpackaged/main/default/objects/Coupon__c/fields/Negotiation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Start_Date__c</fullName>
    <description>US-0018714 [AU] New Fields in Coupon and Coupon Seller</description>
    <label>Negotiation Start Date</label>
    <type>DateTime</type>
</CustomField>