unpackaged/main/default/objects/Coupon__c/fields/Preview_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Preview_T_Cs__c</fullName>
    <description>US-0011769 - New custom fields for Coupons</description>
    <label>Preview T&amp;Cs</label>
    <type>Url</type>
</CustomField>