unpackaged/main/default/objects/Coupon__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <defaultValue>&quot;66&quot;</defaultValue>
    <description>EPH-7724 Add new fields to Coupon Object</description>
    <label>Reason</label>
    <length>5</length>
    <type>Text</type>
</CustomField>