unpackaged/main/default/objects/Coupon__c/fields/Seller_Co_funding_amount_forecast__c.field-meta.xml
<CustomField>
    <fullName>Seller_Co_funding_amount_forecast__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <formula>eBay_Budget__c  *  Seller_Co_funding_share_forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Co-funding Amount (forecast)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>