unpackaged/main/default/objects/Coupon__c/fields/Seller_Co_funding_share_forecast__c.field-meta.xml
<CustomField>
    <fullName>Seller_Co_funding_share_forecast__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <inlineHelpText>This is the forecast provided by the Coupon Owner</inlineHelpText>
    <label>Seller Co-funding Share (forecast)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>