unpackaged/main/default/objects/Coupon__c/fields/Seller_List__c.field-meta.xml
<CustomField>
    <fullName>Seller_List__c</fullName>
    <description>US-0011769 - New custom fields for Coupons</description>
    <label>Seller List</label>
    <type>Url</type>
</CustomField>