unpackaged/main/default/objects/Coupon__c/fields/Sellers_Contract_Signed2__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Contract_Signed2__c</fullName>
    <description>EPH-7262 Adjustment to Coupon Object
US-0010777- External Sharing for Coupon Seller Object</description>
    <inlineHelpText>Count of sellers that have accepted the contract</inlineHelpText>
    <label># Sellers Contract Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>