unpackaged/main/default/objects/Coupon__c/fields/Sellers_Targeted2__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Targeted2__c</fullName>
    <description>[#EPH-7450] Coupon Object - Add new count field # Sellers Targeted
US-0010777- External Sharing for Coupon Seller Object</description>
    <inlineHelpText>Count all coupon seller related records</inlineHelpText>
    <label># Sellers Targeted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>