unpackaged/main/default/objects/Coupon__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Seller Negotiation</fullName>
            </value>
            <value>
                <fullName>Coupon Running</fullName>
            </value>
            <value>
                <fullName>Coupon Executed</fullName>
            </value>
            <value>
                <fullName>T4 Statement Send</fullName>
            </value>
            <value>
                <fullName>T34 Statement Send</fullName>
                <label>T40 Statement Send</label>
            </value>
            <value>
                <fullName>Coupon rejected</fullName>
            </value>
            <value>
                <fullName>Budget Confirmed</fullName>
                <isActive>false</isActive>
                <label>Budget Confirmed</label>
            </value>
            <value>
                <fullName>Budget Rejected</fullName>
                <isActive>false</isActive>
                <label>Budget Rejected</label>
            </value>
            <value>
                <fullName>Budget Requested</fullName>
                <isActive>false</isActive>
                <label>Budget Requested</label>
            </value>
            <value>
                <fullName>Clarification Required</fullName>
                <isActive>false</isActive>
                <label>Clarification Required</label>
            </value>
            <value>
                <fullName>Invoice(s) approved</fullName>
                <isActive>false</isActive>
                <label>Invoice(s) approved</label>
            </value>
            <value>
                <fullName>Invoice(s) paid</fullName>
                <isActive>false</isActive>
                <label>Invoice(s) paid</label>
            </value>
            <value>
                <fullName>Invoice(s) pending</fullName>
                <isActive>false</isActive>
                <label>Invoice(s) pending</label>
            </value>
            <value>
                <fullName>Invoice(s) rejected</fullName>
                <isActive>false</isActive>
                <label>Invoice(s) rejected</label>
            </value>
            <value>
                <fullName>Invoice(s) send</fullName>
                <isActive>false</isActive>
                <label>Invoice(s) send</label>
            </value>
            <value>
                <fullName>Items Accepted</fullName>
                <isActive>false</isActive>
                <label>Items Accepted</label>
            </value>
            <value>
                <fullName>Items Provided</fullName>
                <isActive>false</isActive>
                <label>Items Provided</label>
            </value>
            <value>
                <fullName>Items Rejected</fullName>
                <isActive>false</isActive>
                <label>Items Rejected</label>
            </value>
            <value>
                <fullName>Payment Rejected</fullName>
                <isActive>false</isActive>
                <label>Payment Rejected</label>
            </value>
            <value>
                <fullName>Payment Sent</fullName>
                <isActive>false</isActive>
                <label>Payment Sent</label>
            </value>
            <value>
                <fullName>Ready for Payment</fullName>
                <isActive>false</isActive>
                <label>Ready for Payment</label>
            </value>
            <value>
                <fullName>Seller(s) Contract Signed</fullName>
                <isActive>false</isActive>
                <label>Seller(s) Contract Signed</label>
            </value>
            <value>
                <fullName>Statement Verified</fullName>
                <isActive>false</isActive>
                <label>Statement Verified</label>
            </value>
            <value>
                <fullName>Verify Invoice</fullName>
                <isActive>false</isActive>
                <label>Verify Invoice</label>
            </value>
            <value>
                <fullName>Verify Statement</fullName>
                <isActive>false</isActive>
                <label>Verify Statement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>