unpackaged/main/default/objects/Coupon__c/fields/T_Cs_URL__c.field-meta.xml
<CustomField>
    <fullName>T_Cs_URL__c</fullName>
    <description>EPH-7162 Object: Coupon__c - Create two record types</description>
    <label>T&amp;Cs URL</label>
    <type>Url</type>
</CustomField>