unpackaged/main/default/objects/Coupon__c/fields/Total_number_of_co_invest__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_co_invest__c</fullName>
    <description>US-0010588 - Coupon seller: display chart to count total coupon items &amp; split per seller</description>
    <label>Total number of co-invest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>