unpackaged/main/default/objects/Coupon__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <defaultValue>&quot;NRC&quot;</defaultValue>
    <description>EPH-7724 Add new fields to Coupon Object</description>
    <label>Transaction_Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>