unpackaged/main/default/objects/Coupon__c/fields/Trigger1DayAfterNegotiationEndDate__c.field-meta.xml
<CustomField>
    <fullName>Trigger1DayAfterNegotiationEndDate__c</fullName>
    <description>US-0005984</description>
    <label>Trigger1DayAfterNegotiationEndDate</label>
    <type>DateTime</type>
</CustomField>