unpackaged/main/default/objects/Coupon__c/fields/Trigger34DayAfterEndDate__c.field-meta.xml
<CustomField>
    <fullName>Trigger34DayAfterEndDate__c</fullName>
    <description>US-0018731</description>
    <label>Trigger34DayAfterEndDate</label>
    <type>DateTime</type>
</CustomField>