unpackaged/main/default/objects/Coupon__c/fields/Trigger4DayAfterEndDate__c.field-meta.xml
<CustomField>
    <fullName>Trigger4DayAfterEndDate__c</fullName>
    <description>US-0018731</description>
    <label>Trigger4DayAfterEndDate</label>
    <type>DateTime</type>
</CustomField>