unpackaged/main/default/objects/Coupon__c/fields/TriggerEmailManhattan__c.field-meta.xml
<CustomField>
    <fullName>TriggerEmailManhattan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7725 Send BCD file via email to Finance DL after Coupon ended</description>
    <label>TriggerEmailManhattan</label>
    <type>Checkbox</type>
</CustomField>